src/bastet/syntax/parser/grammar/LeilaParser.ts
// Generated from src/bastet/syntax/parser/grammar/Leila.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { LeilaListener } from "./LeilaListener";
import { LeilaVisitor } from "./LeilaVisitor";


export class LeilaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly T__80 = 81;
	public static readonly T__81 = 82;
	public static readonly T__82 = 83;
	public static readonly T__83 = 84;
	public static readonly T__84 = 85;
	public static readonly T__85 = 86;
	public static readonly T__86 = 87;
	public static readonly T__87 = 88;
	public static readonly T__88 = 89;
	public static readonly T__89 = 90;
	public static readonly T__90 = 91;
	public static readonly T__91 = 92;
	public static readonly T__92 = 93;
	public static readonly T__93 = 94;
	public static readonly T__94 = 95;
	public static readonly T__95 = 96;
	public static readonly T__96 = 97;
	public static readonly T__97 = 98;
	public static readonly T__98 = 99;
	public static readonly T__99 = 100;
	public static readonly T__100 = 101;
	public static readonly T__101 = 102;
	public static readonly T__102 = 103;
	public static readonly T__103 = 104;
	public static readonly T__104 = 105;
	public static readonly T__105 = 106;
	public static readonly T__106 = 107;
	public static readonly T__107 = 108;
	public static readonly T__108 = 109;
	public static readonly Boolean = 110;
	public static readonly Bool = 111;
	public static readonly String = 112;
	public static readonly Identifier = 113;
	public static readonly IntegerLiteral = 114;
	public static readonly DecimalLiteral = 115;
	public static readonly Whitespace = 116;
	public static readonly Newline = 117;
	public static readonly BlockComment = 118;
	public static readonly LineComment = 119;
	public static readonly RULE_program = 0;
	public static readonly RULE_fileType = 1;
	public static readonly RULE_actorDefinitionList = 2;
	public static readonly RULE_actorDefinition = 3;
	public static readonly RULE_inheritsFrom = 4;
	public static readonly RULE_actorMode = 5;
	public static readonly RULE_actorComponentsDefinition = 6;
	public static readonly RULE_resource = 7;
	public static readonly RULE_resourceType = 8;
	public static readonly RULE_resourceList = 9;
	public static readonly RULE_declarationStmt = 10;
	public static readonly RULE_declarationStmtList = 11;
	public static readonly RULE_type = 12;
	public static readonly RULE_primitiveType = 13;
	public static readonly RULE_script = 14;
	public static readonly RULE_scriptIdent = 15;
	public static readonly RULE_scriptList = 16;
	public static readonly RULE_scriptAttributeList = 17;
	public static readonly RULE_scriptAttribute = 18;
	public static readonly RULE_event = 19;
	public static readonly RULE_messageNamespace = 20;
	public static readonly RULE_methodDefinitionList = 21;
	public static readonly RULE_methodDefinition = 22;
	public static readonly RULE_methodResultDeclaration = 23;
	public static readonly RULE_externMethodResultDeclaration = 24;
	public static readonly RULE_methodAttributeList = 25;
	public static readonly RULE_methodAttribute = 26;
	public static readonly RULE_parameter = 27;
	public static readonly RULE_parameterList = 28;
	public static readonly RULE_parameterListPlain = 29;
	public static readonly RULE_stmtList = 30;
	public static readonly RULE_blockMode = 31;
	public static readonly RULE_stmtListPlain = 32;
	public static readonly RULE_controlStmt = 33;
	public static readonly RULE_ifStmt = 34;
	public static readonly RULE_elseCase = 35;
	public static readonly RULE_untilStmt = 36;
	public static readonly RULE_repeatTimesStmt = 37;
	public static readonly RULE_repeatForeverStmt = 38;
	public static readonly RULE_callStmt = 39;
	public static readonly RULE_expressionList = 40;
	public static readonly RULE_expressionListPlain = 41;
	public static readonly RULE_expressionStmt = 42;
	public static readonly RULE_stmt = 43;
	public static readonly RULE_metaAttributeList = 44;
	public static readonly RULE_metaAttribute = 45;
	public static readonly RULE_nonCtrlStmt = 46;
	public static readonly RULE_commonStmt = 47;
	public static readonly RULE_listStmt = 48;
	public static readonly RULE_setStmt = 49;
	public static readonly RULE_setStmtList = 50;
	public static readonly RULE_terminationStmt = 51;
	public static readonly RULE_stringExpr = 52;
	public static readonly RULE_boolExpr = 53;
	public static readonly RULE_numOrStringExpr = 54;
	public static readonly RULE_numExpr = 55;
	public static readonly RULE_listExpr = 56;
	public static readonly RULE_actorExpr = 57;
	public static readonly RULE_expression = 58;
	public static readonly RULE_unspecifiedExpr = 59;
	public static readonly RULE_variable = 60;
	public static readonly RULE_ident = 61;
	public static readonly RULE_number = 62;
	public static readonly RULE_resourceLocator = 63;
	public static readonly RULE_message = 64;
	public static readonly RULE_messageDestination = 65;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "fileType", "actorDefinitionList", "actorDefinition", "inheritsFrom", 
		"actorMode", "actorComponentsDefinition", "resource", "resourceType", 
		"resourceList", "declarationStmt", "declarationStmtList", "type", "primitiveType", 
		"script", "scriptIdent", "scriptList", "scriptAttributeList", "scriptAttribute", 
		"event", "messageNamespace", "methodDefinitionList", "methodDefinition", 
		"methodResultDeclaration", "externMethodResultDeclaration", "methodAttributeList", 
		"methodAttribute", "parameter", "parameterList", "parameterListPlain", 
		"stmtList", "blockMode", "stmtListPlain", "controlStmt", "ifStmt", "elseCase", 
		"untilStmt", "repeatTimesStmt", "repeatForeverStmt", "callStmt", "expressionList", 
		"expressionListPlain", "expressionStmt", "stmt", "metaAttributeList", 
		"metaAttribute", "nonCtrlStmt", "commonStmt", "listStmt", "setStmt", "setStmtList", 
		"terminationStmt", "stringExpr", "boolExpr", "numOrStringExpr", "numExpr", 
		"listExpr", "actorExpr", "expression", "unspecifiedExpr", "variable", 
		"ident", "number", "resourceLocator", "message", "messageDestination",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'program'", "'module'", "'begin'", "'end'", "'is'", "','", 
		"'actor'", "'role'", "'image'", "'sound'", "'declare'", "'as'", "'list'", 
		"'of'", "'int'", "'integer'", "'float'", "'boolean'", "'string'", "'enum'", 
		"'['", "']'", "'script'", "'on'", "'do'", "'restart'", "'never'", "'bootstrap'", 
		"'finished'", "'setup'", "'startup'", "'started'", "'clone'", "'message'", 
		"'condition'", "'statement'", "'in'", "'define'", "'extern'", "'returns'", 
		"':'", "'atomic'", "'('", "')'", "'if'", "'then'", "'else'", "'until'", 
		"'repeat'", "'times'", "'forever'", "'evaluate'", "'@'", "'wait'", "'seconds'", 
		"'stop'", "'other'", "'scripts'", "'create'", "'broadcast'", "'and'", 
		"'reset'", "'timer'", "'epsilon'", "'assume'", "'precision'", "'push'", 
		"'pop'", "'delete'", "'all'", "'from'", "'add'", "'to'", "'insert'", "'at'", 
		"'replace'", "'item'", "'by'", "'this'", "'cast'", "'attribute'", "'join'", 
		"'letter'", "'default'", "'for'", "'?string'", "'not'", "'or'", "'>='", 
		"'>'", "'<'", "'<='", "'='", "'contains'", "'?bool'", "'length'", "'index'", 
		"'*'", "'/'", "'mod'", "'+'", "'-'", "'?number'", "'self'", "'locate'", 
		"'start'", "'?expr'", "'.'", "'strid'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "Boolean", "Bool", 
		"String", "Identifier", "IntegerLiteral", "DecimalLiteral", "Whitespace", 
		"Newline", "BlockComment", "LineComment",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(LeilaParser._LITERAL_NAMES, LeilaParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return LeilaParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Leila.g4"; }

	// @Override
	public get ruleNames(): string[] { return LeilaParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return LeilaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(LeilaParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, LeilaParser.RULE_program);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this.fileType();
			this.state = 133;
			this.ident();
			this.state = 134;
			this.actorDefinitionList();
			this.state = 135;
			this.match(LeilaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fileType(): FileTypeContext {
		let _localctx: FileTypeContext = new FileTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, LeilaParser.RULE_fileType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			_la = this._input.LA(1);
			if (!(_la === LeilaParser.T__0 || _la === LeilaParser.T__1)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actorDefinitionList(): ActorDefinitionListContext {
		let _localctx: ActorDefinitionListContext = new ActorDefinitionListContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, LeilaParser.RULE_actorDefinitionList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LeilaParser.T__6 || _la === LeilaParser.T__7) {
				{
				{
				this.state = 139;
				this.actorDefinition();
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actorDefinition(): ActorDefinitionContext {
		let _localctx: ActorDefinitionContext = new ActorDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, LeilaParser.RULE_actorDefinition);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.actorMode();
			this.state = 146;
			this.ident();
			this.state = 147;
			this.inheritsFrom();
			this.state = 148;
			this.match(LeilaParser.T__2);
			this.state = 149;
			this.actorComponentsDefinition();
			this.state = 150;
			this.match(LeilaParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inheritsFrom(): InheritsFromContext {
		let _localctx: InheritsFromContext = new InheritsFromContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, LeilaParser.RULE_inheritsFrom);
		let _la: number;
		try {
			this.state = 162;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case LeilaParser.T__4:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 152;
				this.match(LeilaParser.T__4);
				this.state = 153;
				this.ident();
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === LeilaParser.T__5) {
					{
					{
					this.state = 154;
					this.match(LeilaParser.T__5);
					this.state = 155;
					this.ident();
					}
					}
					this.state = 160;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case LeilaParser.T__2:
				this.enterOuterAlt(_localctx, 2);
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actorMode(): ActorModeContext {
		let _localctx: ActorModeContext = new ActorModeContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, LeilaParser.RULE_actorMode);
		try {
			this.state = 166;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case LeilaParser.T__6:
				_localctx = new ConcreteActorModeContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 164;
				this.match(LeilaParser.T__6);
				}
				break;
			case LeilaParser.T__7:
				_localctx = new ActorRoleModeContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 165;
				this.match(LeilaParser.T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actorComponentsDefinition(): ActorComponentsDefinitionContext {
		let _localctx: ActorComponentsDefinitionContext = new ActorComponentsDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, LeilaParser.RULE_actorComponentsDefinition);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.resourceList();
			this.state = 169;
			this.declarationStmtList();
			this.state = 170;
			this.setStmtList();
			this.state = 171;
			this.methodDefinitionList();
			this.state = 172;
			this.scriptList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public resource(): ResourceContext {
		let _localctx: ResourceContext = new ResourceContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, LeilaParser.RULE_resource);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 174;
			this.resourceType();
			this.state = 175;
			this.ident();
			this.state = 176;
			this.resourceLocator();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public resourceType(): ResourceTypeContext {
		let _localctx: ResourceTypeContext = new ResourceTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, LeilaParser.RULE_resourceType);
		try {
			this.state = 180;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case LeilaParser.T__8:
				_localctx = new ImageResourceContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 178;
